--- a/src/app/styles/topAjudantes.css
+++ b/src/app/styles/topAjudantes.css
@@ -1,5 +1,119 @@
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
+
+.header-ajudantes{
+    margin-top: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 6px 47px;
+    color: white;
+    font-family: 'Julius Sans One';
+}
+
+.header-ajudantes a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color:white ;
+    background-color:  #AE3C56;
+    padding: 8px 22px;
+    border-radius: 8px;
+    border-bottom: 5px solid #5a0216;
+}
 .top-ajudantes-container{
     display: flex;
     flex-direction: column;
+    font-family:'Inria Sans';
+    background: rgb(160,0,0);
+    background: radial-gradient(circle, rgba(160,0,0,1) 0%, rgba(15,25,35,1) 68%, rgba(15,25,35,1) 100%);
+}
+
+#title{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 30px;
+}
+
+#top-ajud{
+    font-size: 25px;
+}
+
+.create-button{
+    font-size: 35px;
+}
+
+.profile-picture{
+    width: 66px;
+    height: 66px;
+    border-radius: 50px;
+    border: 3px solid #AE3C56;
+}
+
+.listagem-ajudantes{
+    width: 94%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     
+}
+
+.ajudante-item{
+    box-shadow: 0px 3px 13px -1px #AE3C56;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+    background-color: #0f0f0f;
+    border-radius: 5px;
+    box-sizing: border-box;
+    padding: 30px 35px;
+    border-bottom: 8px solid black;
+    transition: 0.4s ease-in-out;
+}
+
+
+.ajudante-item:hover{
+    background-color: #222222;
+    box-shadow: 0px 3px 13px 4px #ff003c;
+}
+.ajudante-info{
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
+.actions{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.ajudante-name{
+    width: 200px;
+}
+.edit-button{
+    display: flex;
+    align-items: center;
+    font-size: 28px;
+    transition: 0.2s ease-in;
+}
+
+.edit-button svg:hover{
+    border-bottom: 2px solid white;
+}
+.delete-button{
+    display: flex;
+    font-size: 16px;
+    background-color: #ae3c56;
+    color: white;
+    align-items: center;
+    padding: 7px;
+    border: none;
+    border-radius: 6px;
+}
+
+.delete-button:hover{
+    cursor: pointer;
+    background-color: #89273e;
 }
