--- a/src/app/styles/Login.css
+++ b/src/app/styles/Login.css
@@ -6,11 +6,12 @@
 }
 
 body {
-  background-color: #131418;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url(/login-bg.jpg);
+    background-size: cover;
 }
 
 .login-container {
@@ -19,7 +20,8 @@ body {
   padding: 30px 35px;
   background-color: #f9f9f9;
   border-radius: 8px;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); */
+  box-shadow: 0px 0px 400px 200px rgba(0,0,0,0.41);
 }
 
 .login-title {
@@ -82,7 +84,7 @@ h3 {
   border-radius: 5px;
   cursor: pointer;
   margin-top: 20px;
-  transition: background-color 0.3s;
+  transition: ease-in-out 0.3s;
 }
 
 .login-button:hover {
