--- a/src/app/styles/Home.css
+++ b/src/app/styles/Home.css
@@ -49,7 +49,9 @@ main{
     align-items: center;
     justify-content: center;
     gap: 32px;
+    font-size: 28px;
 }
+
 
 .icon{
     padding: 10px;
