--- a/src/app/styles/Login.css
+++ b/src/app/styles/Login.css
@@ -1,4 +1,6 @@
 /* Estilos gerais */
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
   font-family: 'Inria Sans', sans-serif;
   margin: 0;
@@ -15,13 +17,13 @@ body {
 }
 
 .login-container {
-  max-width: 500px;
-  width: 100%;
-  padding: 30px 35px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  /* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); */
-  box-shadow: 0px 0px 400px 200px rgba(0,0,0,0.41);
+  max-width: 400px;
+    width: 100%;
+    padding: 47px 47px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    /* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); */
+    box-shadow: 0px 0px 400px 200px rgba(0, 0, 0, 0.41);
 }
 
 .login-title {
@@ -72,6 +74,9 @@ h3 {
   color: white;
   cursor: pointer;
   font-size: 20px;
+  display: flex;
+  align-items: center;
+  margin-top: 3px;
 }
 
 .login-button {
@@ -89,4 +94,51 @@ h3 {
 
 .login-button:hover {
   background-color: #B11A3C;
+}
+
+.login-content{
+  display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 0px 100px;
+}
+
+#logo-pic{
+  align-self: start;
+  width: 100px;
+  height: 72px;
+}
+
+#direitos{
+  font-family: "Kanit", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  color: rgb(201, 201, 201);
+  font-size: 11px;
+}
+
+#rodape{
+  margin-top: 37px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#cadastro{
+  text-align: center;
+  margin-top: 40px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+#bot-cad{
+  color: #AE3C56;
+}
+
+#bot-cad:visited{
+  color: #AE3C56 ;
 }
