--- a/src/app/styles/topAjudantes.css
+++ b/src/app/styles/topAjudantes.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
 
 .header-ajudantes{
+    width: 94%;
     margin-top: 22px;
     display: flex;
     align-items: center;
@@ -23,9 +24,10 @@
 .top-ajudantes-container{
     display: flex;
     flex-direction: column;
-    font-family:'Inria Sans';
-    background: rgb(160,0,0);
-    background: radial-gradient(circle, rgba(160,0,0,1) 0%, rgba(15,25,35,1) 68%, rgba(15,25,35,1) 100%);
+    font-family: 'Inria Sans';
+    background: rgb(160, 0, 0);
+    background: radial-gradient(circle, rgba(160, 0, 0, 1) 0%, rgba(15, 25, 35, 1) 68%, rgba(15, 25, 35, 1) 100%);
+    align-items: center;
 }
 
 #title{
@@ -55,7 +57,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    
+    padding: 0;
 }
 
 .ajudante-item{
@@ -116,4 +118,29 @@
 .delete-button:hover{
     cursor: pointer;
     background-color: #89273e;
+}
+
+.pagination-controls ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    gap: 5px;
+}
+
+.pagination-controls ul li {
+    width: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px;
+    border-radius: 6px;
+    background-color: rgb(15 15 15);
+    color: #ae3c56;
+    /* gap: 15px;*/
+    cursor: pointer;
+}
+
+.pagination-controls ul span{
+    display: none;
 }
