--- a/src/app/styles/topAjudantes.css
+++ b/src/app/styles/topAjudantes.css
@@ -45,6 +45,11 @@
     font-size: 35px;
 }
 
+.create-button:hover{
+    background-color:#800e28;
+    border: none;
+}
+
 .profile-picture{
     width: 66px;
     height: 66px;
@@ -139,6 +144,13 @@
     color: #ae3c56;
     /* gap: 15px;*/
     cursor: pointer;
+    transition: 0.4s ease-in-out;
+}
+
+.pagination-controls ul li:hover{
+    background-color: #AE3C56;
+    color: white;
+    box-shadow: 0px 0px 5px rgb(67, 67, 67);
 }
 
 .pagination-controls ul span{
