--- a/src/app/styles/detailTopAjudante.css
+++ b/src/app/styles/detailTopAjudante.css
@@ -2,10 +2,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
 
 .read-ajudante-container{
+    height: 82vh;
+    width: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: radial-gradient(circle, rgb(160 0 0 / 73%) 0%, rgba(15, 25, 35, 1) 68%, rgba(15, 25, 35, 1) 100%);
+    justify-content: center;
+}
+
+.content-container{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    align-items: center;
+    background-color: #D9D9D9;
+    font-family: 'Inria Sans';
+    box-shadow: 0px 0px 25px rgb(13, 13, 13);
 }
 
 .ajudante-image{
     width: 80px;
     height: 80px;
+}
+
+#headerDetail{
+    width: 70%;
+    font-family: 'Inria Sans';
+    color: #D9D9D9;
+    font-size: 13px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#headerDetail h1{
+    margin: 0;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+#bg-nick{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #131418;
+    color: #dedede;
+    padding: 30px 0px;
+}
+
+#bottom-linha{
+    width: 100%;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    background-color: #AE3C56;
+    height: 5px;
+    border-bottom: 4px solid #560115;
 }
