--- a/src/app/styles/detailTopAjudante.css
+++ b/src/app/styles/detailTopAjudante.css
@@ -14,7 +14,7 @@
 .content-container{
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 66%;
     align-items: center;
     background-color: #D9D9D9;
     font-family: 'Inria Sans';
@@ -24,10 +24,11 @@
 .ajudante-image{
     width: 80px;
     height: 80px;
+    border-radius: 80px;
 }
 
 #headerDetail{
-    width: 70%;
+    width: 66%;
     font-family: 'Inria Sans';
     color: #D9D9D9;
     font-size: 13px;
@@ -60,4 +61,73 @@
     background-color: #AE3C56;
     height: 5px;
     border-bottom: 4px solid #560115;
+}
+
+#mid-content{
+    box-sizing: border-box;
+    width: 100%;
+    display: flex;
+    padding: 35px 53px;
+    align-items: center;
+    gap: 24px;
+}
+
+.stats-ajud{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.stats-ajud p{
+    color: #131418;
+    font-weight: 900;
+    margin: 0;
+}
+
+.stats-ajud p span{
+    margin: 0;
+    font-weight: 600;
+}
+
+#botoes-baixo{
+    box-sizing: border-box;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 17px;
+    gap: 11px;
+}
+
+.back-button{
+    padding: 12px 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #AE3C56;
+    color: white;
+    font-weight: 700;
+    cursor: pointer;
+    border-radius: 8px;
+    border: #AE3C56;
+    border-bottom: 4px solid #560115;
+    transition: 0.3s ease-in-out;
+}
+.back-button:hover{
+    border: none;
+    background-color: #600117;
+}
+
+#img-rank{
+    width: 40px;
+    height: 40px;
+}
+
+.rank-ajud{
+    margin: 0;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    gap: 13px;
+    font-weight: 900;
 }
