--- a/src/app/styles/topAjudantes.css
+++ b/src/app/styles/topAjudantes.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
 
 .header-ajudantes{
-    width: 94%;
+    width: 100%;
     margin-top: 22px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 6px 47px;
+    padding: 6px 0px;
     color: white;
     font-family: 'Julius Sans One';
 }
@@ -58,7 +58,7 @@
 }
 
 .listagem-ajudantes{
-    width: 94%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -155,4 +155,20 @@
 
 .pagination-controls ul span{
     display: none;
+}
+
+.divider{
+    display: none;
+    background-color: #AE3C56;
+    width: 100%;
+    height: 5px;
+    border-bottom: 5px solid #5a0216;
+}
+
+.content-header{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-bottom: 10px;
 }
