--- a/src/app/styles/pixels.css
+++ b/src/app/styles/pixels.css
@@ -1,7 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+  font-family: 'Inria Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+body{
+    background: radial-gradient(circle, rgba(160, 0, 0, 1) 0%, rgba(15, 25, 35, 1) 68%, rgba(15, 25, 35, 1) 100%);
+}
+
+
 .post-item{
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 .post-link-name{
     color: black;
 }
+
+.pixelslist{
+    margin: 3rem;
+}
+
+.pixelslist li{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style: none;
+    padding: 0px 20px 0px 20px;
+    margin-bottom: 1rem;
+    background-color: #0f141a;
+    color: white;
+    height: 6rem;
+    border: 3px solid #ff0024;
+}
+
