--- a/src/app/styles/pixels.css
+++ b/src/app/styles/pixels.css
@@ -51,12 +51,89 @@ body{
 
 .main-box{
     display: flex;
+    width: 100%;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    box-sizing: border-box;
+    /* padding: 90px 0px; */
+    margin-top: 20px;
 }
 
 .pixelcreatebox{
-    margin: 3rem;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #D9D9D9;
+    box-sizing: border-box;
+    padding: 15px 45px;
+    border: 2px solid #ff0024;
+}
+.label-form{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
 }
 
+#img-box{
+    display: flex;
+    height: 3rem;
+    align-items: center;
+    justify-content: center;
+    background-color: #AE3C56;
+    color: white;
+    font-weight: 700;
+    cursor: pointer;
+    border-radius: 8px;
+    border: #AE3C56;
+    border-bottom: 4px solid #560115;
+    transition: 0.3s ease-in-out;
+
+}
+
+#img-box input{
+    display: none ;
+}
+.form-creation{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+}
+.botao-criar{
+    box-sizing: border-box;
+    font-family: 'Inria Sans';
+    font-weight: 900;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 120px;
+    padding: 9px;
+    color: white;
+    background-color: #AE3C56;
+    cursor: pointer;
+    border: none;
+    border-bottom: 5px solid #720f26;
+    border-radius: 8px;
+    font-size: 16px;
+    transition: 0.4s ease-in-out;
+    align-self: center;
+}
+.botao-criar:hover{
+    background-color: #720f26;
+}
+
+.inputs-pers{
+    width: 100%;
+    border-radius: 6px;
+    border: none;
+    height: 50px;
+    font-size: 17px;
+    box-sizing: border-box;
+    padding: 10px;
+    background-color: #131418;
+    color: white   ;
+    resize: none;
+}
