--- a/src/app/styles/pixels.css
+++ b/src/app/styles/pixels.css
@@ -137,3 +137,40 @@ body{
     color: white   ;
     resize: none;
 }
+
+.detail-container{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #D9D9D9;
+    box-sizing: border-box;
+    padding: 15px 45px;
+    border: 2px solid #ff0024;
+}
+
+.botoes-baixo{
+    box-sizing: border-box;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 17px;
+    gap: 11px;
+}
+.infosdetail{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 90%;
+}
+.infotexto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+.imagempixel img{
+    height: 15rem;
+    width: 30rem;
+    border: 2px solid #ff0024;
+}
