--- a/src/app/styles/pixels.css
+++ b/src/app/styles/pixels.css
@@ -32,7 +32,7 @@ body{
 
 
 .pixelslist{
-    margin: 1rem 3rem 3rem 3rem;
+    margin: 1rem 3rem 1rem 3rem;
     color: white;
 }
 
@@ -173,4 +173,31 @@ body{
     height: 15rem;
     width: 30rem;
     border: 2px solid #ff0024;
+}
+.pagination-controls nav{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    gap: 5px;
+    margin-bottom: 1rem;
+}
+.pagination-controls ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    gap: 5px;
+}
+.pagination-controls ul li{
+    width: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px;
+    border-radius: 6px;
+    background-color: rgb(15 15 15);
+    color: #ae3c56;
+    cursor: pointer;
+    transition: 0.4s ease-in-out;
 }
