adicionando imagens no list

--- a/src/app/styles/pixels.css
+++ b/src/app/styles/pixels.css
@@ -41,12 +41,23 @@ body{
     align-items: center;
     justify-content: space-between;
     list-style: none;
-    padding: 0px 20px 0px 20px;
+    padding: 0px 0px 0px 20px;
     margin-bottom: 1rem;
     background-color: #0f141a;
     color: white;
     height: 6rem;
     border: 2px solid #ff0024;
+}
+
+.pixellistimg img{
+    height: 91px;
+    width: 136px;
+    margin-left: 0.5rem;
+}
+
+#list-direita{
+    display: flex;
+    flex-direction: row;
 }
 
 .main-box{
