--- a/src/app/styles/topAjudantes.css
+++ b/src/app/styles/topAjudantes.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
 
+body{
+    background: radial-gradient(circle, rgba(160, 0, 0, 1) 0%, rgba(15, 25, 35, 1) 68%, rgba(15, 25, 35, 1) 100%);
+}
+
 .header-ajudantes{
     width: 100%;
     margin-top: 22px;
@@ -25,8 +29,8 @@
     display: flex;
     flex-direction: column;
     font-family: 'Inria Sans';
-    background: rgb(160, 0, 0);
-    background: radial-gradient(circle, rgba(160, 0, 0, 1) 0%, rgba(15, 25, 35, 1) 68%, rgba(15, 25, 35, 1) 100%);
+    /* background: rgb(160, 0, 0);
+    background: radial-gradient(circle, rgba(160, 0, 0, 1) 0%, rgba(15, 25, 35, 1) 68%, rgba(15, 25, 35, 1) 100%); */
     align-items: center;
 }
 
